# atlas-backend

./: README.md  pyproject.toml
docs/services/01-auth/: jwt.md  overview.md  progress.md
services/auth-service/alembic/: env.py
services/auth-service/alembic/versions/: 8c65ae21572d_add_refresh_tokens_table.py  c4952617d433_push.py  e11dc5379a67_first_push.py
services/auth-service/app/: main.py
services/auth-service/app/api/: health.py
services/auth-service/app/api/v1/: __init__.py  auth.py
services/auth-service/app/core/: config.py
services/auth-service/app/db/: session.py
services/auth-service/app/dependencies/: auth.py
services/auth-service/app/infrastructure/queue/: base.py  redis_queue.py
services/auth-service/app/infrastructure/redis/: client.py
services/auth-service/app/jobs/: email_jobs.py
services/auth-service/app/models/: __init__.py  models.py  password_reset_token.py  refresh_token.py
services/auth-service/app/repositories/: password_reset_token_repository.py  refresh_token_repository.py  user_repository.py
services/auth-service/app/schemas/: schemas.py
services/auth-service/app/security/: jwt.py  password.py  refresh_token.py  reset_token.py
services/auth-service/app/services/: auth_service.py  email_service.py  password_reset_service.py
services/auth-service/app/workers/: email_worker.py
