[project]
name = "atlas-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "pydantic[email]>=2.13.4",
    "uvicorn>=0.50.0",
    "pyjwt>=2.8.0",
    "pydantic-settings>=2.2.0",
    "pwdlib[argon2]>=0.1.0",
    "psycopg[binary]>=3.1.0",
    "alembic>=1.13.0",
    "asyncpg>=0.31.0",
    "passlib>=1.7.4",
    "jose>=1.0.0",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
